@@ -15,6 +15,9 @@ libavutil:     2015-08-28
 
 API changes, most recent first:
 
+2016-xx-xx - lavu 55.18.100
+  xxxxxxx audio_fifo.h - Add av_audio_fifo_peek_at().
+
 2016-xx-xx - lavu 55.18.0
   xxxxxxx buffer.h - Add av_buffer_pool_init2().
   xxxxxxx hwcontext.h - Add a new installed header hwcontext.h with a new API
